<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context=".LoginActivity"

    android:background="@drawable/gradiente"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@drawable/background" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:elevation="10dp"
        />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="567dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/versaofinallogoagendaja" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:text="Login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="32dp" />

        <AutoCompleteTextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/caixa_de_texto_redonda"
            android:drawableStart="@drawable/ic_action_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txt_senha"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/caixa_de_texto_redonda"
            android:drawableStart="@drawable/ic_action_password"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true" />


        <Button
            android:id="@+id/btn_entrar"
            style="@style/Animation.AppCompat.Dialog"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="56dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:background="@drawable/botao_redondo"
            />

        <Button
            android:id="@+id/btn_criar_conta"
            style="@style/Animation.AppCompat.Dialog"
            android:textColor="@android:color/white"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="12dp"
            android:text="@string/action_criar_conta"
            android:textStyle="bold"
            android:background="@drawable/botao_redondo_sem_cor"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>